--- a/app/src/main/res/layout/activity_encrypt_details.xml
+++ b/app/src/main/res/layout/activity_encrypt_details.xml
@@ -1,6 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".activities.ActivityInfo">
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:orientation="vertical"
+        android:padding="8dp">
+
+        <TextView
+            android:id="@+id/activity_encrypt_details_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Deine Cäsarverschlüsselung"
+            android:textSize="24sp"
+            tools:layout_height="60dp" />
+
+        <TextView
+            android:id="@+id/activity_encrypt_details_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:gravity="center"
+            android:text="Stelle unten denn Buchstaben ein, nach welche du deinen Text verschlüsseln Möchtest."
+            tools:layout_height="120dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <Spinner
+                android:id="@+id/activity_encrypt_details_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="100dp" />
+
+            <Button
+                android:id="@+id/activity_encrypt_details_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Anwenden" />
+        </LinearLayout>
+
+    </LinearLayout>
+</RelativeLayout>
