--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="margin_distance">8dp</dimen> <!-- Abstand zwischen Objekten -->
 
     <dimen name="height_min_textbox">120dp</dimen>
+    <dimen name="height_min_textbox_halfscreen">500dp</dimen>
+    <dimen name="width_button_default">120dp</dimen>
 </resources>
