--- a/app/src/main/res/layout/activity_alice.xml
+++ b/app/src/main/res/layout/activity_alice.xml
@@ -1,113 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="@dimen/margin_screen">
 
 
     <EditText
         android:id="@+id/activity_alice_text_message"
-        android:layout_width="0dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:ems="10"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/height_min_textbox_halfscreen"
+        android:layout_weight="1"
+        android:background="@null"
+        android:gravity="top"
+        android:hint="@string/empty_text_enter_msg"
+        android:importantForAccessibility="no"
         android:inputType="textMultiLine"
-        android:maxLines="8"
-        android:minLines="3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textAppearance="@style/font_msg_default"
+        android:importantForAutofill="no" tools:targetApi="o"/>
 
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/activity_alice_button_info"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:clickable="true"
-        android:src="@android:drawable/ic_menu_help"
-        app:backgroundTint="@color/colorAlice"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activity_alice_text_message" />
+        android:layout_marginTop="@dimen/margin_distance"
+        android:layout_marginBottom="@dimen/margin_distance"
+        android:layout_weight="0"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
-    <Spinner
-        android:id="@+id/activity_alice_spinner"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/activity_alice_button_info"
-        app:layout_constraintEnd_toStartOf="@+id/activity_alice_button_details"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/activity_alice_button_info"
-        app:layout_constraintTop_toTopOf="@+id/activity_alice_button_info"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_height="40dp"
-        tools:layout_width="185dp" />
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/activity_alice_button_details"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:clickable="true"
+            android:src="@android:drawable/ic_menu_manage"
+            android:textAlignment="center"
+            app:backgroundTint="@color/colorAlice"
+            app:elevation="0dp" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/activity_alice_button_details"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
-        android:clickable="true"
-        android:src="@android:drawable/ic_menu_manage"
-        android:textAlignment="center"
-        app:backgroundTint="@color/colorAlice"
-        app:elevation="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/activity_alice_button_info"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/activity_alice_button_info" />
+        <Spinner
+            android:id="@+id/activity_alice_spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/margin_distance"
+            android:layout_marginRight="@dimen/margin_distance"
+            android:layout_weight="1" />
 
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/activity_alice_button_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:clickable="true"
+            android:src="@android:drawable/ic_menu_help"
+            app:backgroundTint="@color/colorAlice" />
 
-    <TextView
-        android:id="@+id/activity_alice_text_crypted"
-        android:layout_width="0dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
-        android:maxLines="8"
-        android:minLines="3"
-        android:text="@string/empty_text_encoded"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activity_alice_button_info" />
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/activity_alice_button_encrypt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:clickable="true"
-        android:src="@android:drawable/ic_lock_idle_lock"
-        app:backgroundTint="@color/colorAlice"
-        app:elevation="0dp"
-        app:layout_constraintStart_toStartOf="@+id/activity_alice_button_info"
-        app:layout_constraintTop_toBottomOf="@+id/activity_alice_text_crypted" />
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_min_textbox_halfscreen"
+            android:layout_weight="1">
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/activity_alice_button_nfcWrite"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:clickable="true"
-        app:backgroundTint="@color/colorAlice"
-        app:elevation="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/activity_alice_button_encrypt"
-        app:layout_constraintEnd_toEndOf="@+id/activity_alice_button_details"
-        android:src="@android:drawable/ic_menu_send" />
+            <TextView
+                android:id="@+id/activity_alice_text_crypted"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/empty_text_encoded"
+                android:textAppearance="@style/font_msg_default" />
+        </ScrollView>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_distance"
+            android:layout_weight="0"
+            android:orientation="horizontal">
 
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/activity_alice_button_encrypt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:src="@android:drawable/ic_lock_idle_lock"
+                app:backgroundTint="@color/colorAlice"
+                app:elevation="0dp" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/activity_alice_button_nfcWrite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:src="@android:drawable/ic_menu_send"
+                app:backgroundTint="@color/colorAlice"
+                app:elevation="0dp" />
+        </LinearLayout>
+
+    </LinearLayout>
 
 
     <!-- Der Butten muss über das darüberliegende Textfenster-->
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
