--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="font_msg_default">
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">casual</item>
+    </style>
+
 </resources>
