Die anderen xml Dateiel zu denn neuen paddings und abständen angepasst, und teilweise getestet.

--- a/app/src/main/res/layout/activity_cryptotools_minikey.xml
+++ b/app/src/main/res/layout/activity_cryptotools_minikey.xml
@@ -4,16 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/margin_screen"
     tools:context=".activities.ActivityCryptotoolsMinikey">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:orientation="vertical"
-        android:padding="8dp">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/activity_cryptotools_minikey_title"
@@ -24,64 +21,31 @@
             android:textSize="24sp"
             tools:layout_height="60dp" />
 
-        <TextView
-            android:id="@+id/activity_cryptotools_minikey_info"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:gravity="center"
-            android:text="du glaubst das der Text mit einem Minikey verschlüsselt wurde, dann stell doch mal die 6 Buchstaben ein, die deiner meinung nach der Schlüssel sind."
-            tools:layout_height="120dp" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical">
 
-            <Spinner
-                android:id="@+id/activity_cryptotools_minikey_spinner1"
+            <TextView
+                android:id="@+id/activity_cryptotools_minikey_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp" />
-
-            <Spinner
-                android:id="@+id/activity_cryptotools_minikey_spinner2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp" />
-
-            <Spinner
-                android:id="@+id/activity_cryptotools_minikey_spinner3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp" />
-
-            <Spinner
-                android:id="@+id/activity_cryptotools_minikey_spinner4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp" />
-
-            <Spinner
-                android:id="@+id/activity_cryptotools_minikey_spinner5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp" />
-
-            <Spinner
-                android:id="@+id/activity_cryptotools_minikey_spinner6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp" />
+                android:layout_marginTop="@dimen/margin_distance"
+                android:layout_marginBottom="@dimen/margin_distance"
+                android:gravity="center"
+                android:text="du glaubst das der Text mit einem Minikey verschlüsselt wurde, dann stell doch mal die 6 Buchstaben ein, die deiner meinung nach der Schlüssel sind."
+                tools:layout_height="120dp" />
 
             <Button
                 android:id="@+id/activity_cryptotools_minikey_butten"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_distance"
+                android:layout_marginBottom="@dimen/margin_distance"
                 android:text="Entschlüsseln" />
-        </LinearLayout>
 
+        </LinearLayout>
     </LinearLayout>
+
 </RelativeLayout>
