--- a/app/src/main/res/layout/activity_cryptotools_cesar.xml
+++ b/app/src/main/res/layout/activity_cryptotools_cesar.xml
@@ -12,7 +12,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:orientation="vertical"
-        android:padding="8dp">
+        android:padding="@dimen/margin_screen">
 
         <TextView
             android:id="@+id/activity_cryptotools_caesar_title"
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Cäsar Entschlüsselungstool"
+            android:textAppearance="@style/font_msg_default"
             android:textSize="24sp"
             tools:layout_height="60dp" />
 
@@ -27,10 +28,11 @@
             android:id="@+id/activity_cryptotools_caesar_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="@dimen/margin_distance"
+            android:layout_marginBottom="@dimen/margin_distance"
             android:gravity="center"
             android:text="Du willst versuchen denn Text mit Cäsar-Verschlüsselung zu knacken, na dann stell unten mal denn Buchtaben ein, von dem du glaubst das er der Schlüssel war."
+            android:textAppearance="@style/font_msg_default"
             tools:layout_height="120dp" />
 
         <LinearLayout
